fixed MainLayout breakpoint

--- a/src/components/Layouts/Layout.module.css
+++ b/src/components/Layouts/Layout.module.css
@@ -12,7 +12,7 @@
     width: 80%;
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1279px) {
 
     .sideBarContainer {
         width: 33.33%;
